# curso_mlops

./: .gitignore  Commands.md  LICENSE  README.md  README_EMPACOTAMENTO_CODIGO.md  pyproject.toml  requirements-dev.txt
.github/workflows/: CD.yml  CI.yml  publish_package.yml  test_workflow.yml  trial_workflow.yml
app/: Dockerfile
app/requirements/: private.txt  public.txt
app/src/: loader.py  main.py
app/tests/: conftest.py  test_main.py
notebooks/: client.ipynb
requirements/: private.txt
src/: README.md  _version.py  main.py  pyproject.toml
src/interface_segregation/: after.py  before.py
src/ml_communication/: __init__.py  _version.py  requirements.txt
src/ml_communication/storage/: __init__.py  model.py
src/open_closed/: after.py  before.py
src/single_responsability/: after.py  before.py
tests/: conftest.py  test-requirements.txt  test_main.py
tests/storage/: test_model.py
